styles.css
html {
	background-color: rgb(51,52,58);
	/*background-color: green;*/
	color: white;
	font-family: 'Inconsolata', monospace;
}


canvas {  width: 100%;
  height: auto;
  background-color: pink;
  z-index: 0;
}

span {
	width:30px;
	height:30px;
	font-size: 30px;
	color: rgb(60, 3, 66);
}

.text{
	font-size: 30px;
}

.modal {
	display: none;
	position: fixed;
	z-index:1;
	left: 100;
	top:300;
	width:80%;
	height:70%;
	margin-top: 100px;
	margin-left:50px;
	border-radius: 10px;
	overflow:auto;
	color: rgb(60, 3, 66);
	opacity: 1;
	background-color: rgb(220,220,220);
	font-weight: bold;
	font-size: 28px;
	

	/*background-color: rgba(0,0,0,0.4);*/
}

.wrapper {
	  display: flex;
	  flex-direction: column;
  /*align-items: center;*/
  /*justify-content: center;*/
}


.modal p{
	margin-left: 50px;
	margin-top: 50px;
}


/* submit button */
.answer-button {
  /*position: fixed;*/
  /*margin: 0 auto;*/
  margin-top: 15px;
  margin-left:50px;
  margin-right:50px;
  padding: 20px;
  background: rgb(43, 21, 32);
  color: rgb(160, 144, 150);
  font-size: 28px;
  cursor: pointer;
  outline: none;
  border-radius: 10px;
}






/* The Close Button */
/*.close {

	color: rgb(60, 3, 66);
    float: right;
    margin-right:20px;
    font-size: 48px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}*/

